# manual

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
manual/: __init__.py  base.py  util.py
